<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_choose_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mount_device"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/app_black"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_alcohol"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/btn_green"
            android:text="@string/alcohol"
            android:layout_gravity="center"
            android:textColor="@color/app_white"
            android:layout_margin="20dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btn_heart"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/btn_green"
            android:text="@string/heart"
            android:layout_gravity="center"
            android:textColor="@color/app_white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"/>

        <TextView
            android:id="@+id/tv_choice_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/mount_notice"
            android:textColor="@color/app_red"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>